Fix "ebalinux-nativefier-59fc24" App name issiue

--- a/EBALinux.desktop
+++ b/EBALinux.desktop
@@ -1,7 +1,10 @@
 [Desktop Entry]
-Name=EBALinux
-Exec=/opt/EBALinux/EBALinux-linux-x64/EBALinux
-Comment=Eğitim Bilişim Ağı
-Terminal=false
-Icon=/opt/EBALinux/logo.png
 Type=Application
+Name=EBALinux
+Comment=Eğitim Bilişim Ağı
+Exec=/opt/EBALinux/EBALinux-linux-x64/EBALinux
+Icon=/opt/EBALinux/logo.png
+StartupNotify=true
+StartupWMClass=ebalinux-nativefier-59fc24
+Terminal=false
+Categories=Education
