--- a/EBALinux.desktop
+++ b/EBALinux.desktop
@@ -4,4 +4,4 @@ Exec=/opt/EBALinux/EBALinux-linux-x64/EBALinux
 Comment=Eğitim Bilişim Ağı
 Terminal=false
 Icon=/opt/EBALinux/logo.png
-Type=Application
+Type=Education
